route kleur, default view, typo 'minimaal'

--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -100,7 +100,7 @@
     "Map Layer 1": "Kaartlaag 1",
     "Map layer outside current view": "Kaartlaag buiten kaartbeeld",
     "Map layers": "Kaartlagen",
-    "Map layers available (at least 1 required)": "kaartlagen aanwezig (minimmaal 1 nodig)",
+    "Map layers available (at least 1 required)": "kaartlagen aanwezig (minimaal 1 nodig)",
     "Map projection": "Kaartprojectie",
     "map projections not supported by this viewer": "kaartprojecties niet ondersteund door deze viewer",
     "Map view angle": "Kijkhoek",
