add language translations for map-search

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -27,6 +27,7 @@
     "Click first point for area": "Click first point for area",
     "Click last point to finish": "Click last point to finish",
     "Click next point": "Click next point",
+    "Click on a result to zoom": "Click on a result to zoom",
     "Click on the map to measure distance or area": "Click on the map to measure distance or area",
     "Close": "Close",
     "color": "color",
@@ -54,11 +55,13 @@
     "edit map layer": "edit map layer",
     "E": "E",
     "Enter a name": "Enter a name",
+    "Enter at least 1 complete word above.": "Enter at least 1 complete word above. For example, 'Saudi' for 'Saudi Arabia'.",
     "equal-area conic": "equal-area conic",
     "equal-area pseudocylindrical": "equal-area pseudocylindrical",
     "Equal Earth": "Equal Earth",
     "equidistant cylindrical": "equidistant cylindrical",
     "Equirectangular": "Equirectangular",
+    "erase": "erase",
     "Error": "Error",
     "Fill color": "Fill color",
     "Filter": "Filter",
@@ -156,6 +159,9 @@
     "Scale": "Scale",
     "search": "search",
     "Search name, place or address": "Search name, place or address",
+    "Search places and addresses": "Search places and addresses",
+    "Search result for": "Search result for",
+    "searching...": "searching...",
     "Select": "Select",
     "Select a layer": "Select a layer",
     "Select a tool button": "Select a tool button",
@@ -163,6 +169,7 @@
     "Select map layer": "Select map layer",
     "Select point, line, or shape layer": "Select point, line, or shape layer",
     "Select projection": "Select projection",
+    "Select to add to the map": "Select to add to the map",
     "Selected Map Layers": "Selected Map Layers",
     "Selected map layers only": "Selected map layers only",
     "SelectedLine": "Selected line",
@@ -174,6 +181,7 @@
     "Southern Parallel Lat": "Southern Parallel Lat",
     "string": "string",
     "text color": "text color",
+    "The search function prioritizes locations that are within the map view.": "The search function prioritizes locations that are within the map view. If (almost) nothing is found there, the search will expand to other areas.",
     "Toggle attribution": "Toggle attribution",
     "toggle layer visibility": "toggle layer visibility",
     "Toolbox": "Toolbox",
