--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -27,6 +27,7 @@
     "Click first point for area": "Haga clic en el primer punto para el área",
     "Click last point to finish": "Haga clic en el último punto para terminar",
     "Click next point": "Haga clic en el siguiente punto",
+    "Click on a result to zoom": "Haga clic en un resultado para acercar",
     "Click on the map to measure distance or area": "Haga clic en el mapa para medir distancia o área",
     "Close": "Cerrar",
     "color": "color",
@@ -54,11 +55,13 @@
     "E": "E",
     "edit map layer": "editar capa de mapa",
     "Enter a name": "Ingrese un nombre",
+    "Enter at least 1 complete word above.": "Ingrese al menos 1 palabra completa arriba. Por ejemplo, 'Bosnia' para 'Bosnia y Herzegovina'.",
     "equal-area conic": "cónico de área igual",
     "equal-area pseudocylindrical": "pseudocilíndrico de área igual",
     "Equal Earth": "Tierra Igual",
     "equidistant cylindrical": "cilíndrico equidistante",
     "Equirectangular": "Equirectangular",
+    "erase": "borrar",
     "Error": "Error",
     "Fill color": "Color de relleno",
     "Filter": "Filtrar",
@@ -156,6 +159,9 @@
     "Scale": "Escala",
     "search": "buscar",
     "Search name, place or address": "Buscar nombre, lugar o dirección",
+    "Search places and addresses": "Buscar lugares y direcciones",
+    "Search result for": "Resultado de búsqueda para",
+    "searching...": "buscando...",
     "Select": "Seleccionar",
     "Select a layer": "Seleccionar una capa",
     "Select a tool button": "Seleccionar un botón de herramienta",
@@ -163,6 +169,7 @@
     "Select map layer": "Seleccionar capa de mapa",
     "Select point, line, or shape layer": "Seleccionar capa de punto, línea o polígono",
     "Select projection": "Seleccionar proyección",
+    "Select to add to the map": "Seleccione para añadir al mapa",
     "Selected Map Layers": "Capas de Mapa Seleccionadas",
     "Selected map layers only": "Solo capas de mapa seleccionadas",
     "SelectedLine": "Línea seleccionada",
@@ -174,6 +181,7 @@
     "Southern Parallel Lat": "Latitud del Paralelo Sur",
     "string": "cadena",
     "text color": "color del texto",
+    "The search function prioritizes locations that are within the map view.": "La función de búsqueda prioriza las ubicaciones que se encuentran dentro de la vista del mapa. Si no se encuentra (casi) nada allí, la búsqueda se amplía a otras áreas.",
     "Toggle attribution": "Afficher/Masquer les crédits",
     "toggle layer visibility": "alternar visibilidad de capa",
     "Toolbox": "Caja de herramientas",
