--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -27,6 +27,7 @@
     "Click first point for area": "Cliquez sur le premier point pour la surface",
     "Click last point to finish": "Cliquez sur le dernier point pour terminer",
     "Click next point": "Cliquez sur le point suivant",
+    "Click on a result to zoom": "Cliquez sur un résultat pour zoomer",
     "Click on the map to measure distance or area": "Cliquez sur la carte pour mesurer la distance ou la surface.",
     "Close": "Fermer",
     "color": "couleur",
@@ -59,6 +60,8 @@
     "equidistant cylindrical": "cylindrique équidistante",
     "Equirectangular": "Cylindrique équidistante",
     "Enter a name": "Entrez un nom",
+    "Enter at least 1 complete word above.": "Entrez au moins 1 mot complet ci-dessus. Par exemple, 'Bosnie' pour 'Bosnie-et-Herzégovine'.",
+    "erase": "effacer",
     "Error": "Erreur",
     "Fill color": "Couleur de remplissage",
     "Filter": "Filtrer",
@@ -156,6 +159,9 @@
     "Scale": "Échelle",
     "search": "recherche",
     "Search name, place or address": "Recherche par nom, lieu ou adresse",
+    "Search places and addresses": "Rechercher lieux et adresses",
+    "Search result for": "Résultat pour",
+    "searching...": "recherche...",
     "Select": "Sélectionner",
     "Select a layer": "Sélectionner une couche",
     "Select a tool button": "Choisissez un outil via les boutons",
@@ -163,6 +169,7 @@
     "Select map layer": "Select map layer",
     "Select point, line, or shape layer": "Sélectionnez une couche de point, de ligne ou de forme",
     "Select projection": "Sélectionner la projection",
+    "Select to add to the map": "Sélectionnez pour ajouter à la carte",
     "Selected Map Layers": "Couches de carte sélectionnées",
     "Selected map layers only": "Seulement les couches de carte sélectionnées",
     "SelectedLine": "Ligne sélectionnée",
@@ -174,6 +181,7 @@
     "Southern Parallel Lat": "Latitude parallèle sud",
     "string": "texte",
     "text color": "couleur du texte",
+    "The search function prioritizes locations that are within the map view.": "La fonction de recherche donne la priorité aux lieux qui se trouvent dans la vue de la carte. Si (presque) rien n'y est trouvé, la recherche s'étend à d'autres zones.",
     "Toggle attribution": "Afficher/masquer les crédits",
     "toggle layer visibility": "afficher/masquer la couche",
     "Toolbox": "Boîte à outils",
