--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -27,6 +27,7 @@
     "Click first point for area": "Klik op eerste punt voor oppervlakte",
     "Click last point to finish": "Klik laatste punt om te eindigen",
     "Click next point": "Klik volgend punt",
+    "Click on a result to zoom": "Klik om op een resultaat in te zoomen",
     "Click on the map to measure distance or area": "Klik in de kaart om afstand of oppervlakte te meten.",
     "Close": "Sluiten",
     "color": "kleur",
@@ -54,6 +55,8 @@
     "E": "O",
     "edit map layer": "kaartlaag aanpassen",
     "Enter a name": "Voer een naam in",
+    "Enter at least 1 complete word above.": "Vul hierboven minstens 1 compleet woord in. Bijvoorbeeld 'Alphen' voor 'Alphen aan den Rijn'.",
+    "erase": "wissen",
     "Error": "Fout",
     "equal-area conic": "kegelprojectie (oppervlaktegetrouw)",
     "equal-area pseudocylindrical": "aangepaste cilinderprojectie (oppervlaktegetrouw)",
@@ -157,6 +160,9 @@
     "Scale": "Schaalbalk",
     "search": "zoeken",
     "Search name, place or address": "Naam, plaats of adres zoeken",
+    "Search places and addresses": "Zoek plaatsen en adressen",
+    "Search result for": "Zoekresultaat voor",
+    "searching...": "zoeken...",
     "Select": "Selecteer",
     "Select a layer": "Kies een laag",
     "Select a tool button": "Kies gereedschap via de knoppen",
@@ -164,6 +170,7 @@
     "Select map layer": "Selecteer kaartlaag",
     "Select point, line, or shape layer": "Kies punten-, lijnen- of vlakkenlaag",
     "Select projection": "Kies projectie",
+    "Select to add to the map": "Selecteer om toe te voegen aan de kaart",
     "Selected Map Layers": "Gekozen kaartlagen",
     "Selected map layers only": "Alleen geselecteerde kaartlagen",
     "SelectedLine": "Geselecteerde lijn",
@@ -175,6 +182,7 @@
     "Southern Parallel Lat": "Zuidelijke parallel (breedtegraad)",
     "string": "tekst",
     "text color": "tekstkleur",
+    "The search function prioritizes locations that are within the map view.": "De zoekfunctie geeft voorkeur aan locaties die binnen het kaartbeeld liggen. Als daar (bijna) niets gevonden wordt, dan wordt verderop gezocht.",
     "Toggle attribution": "Toon/verberg bronvermelding",
     "toggle layer visibility": "laag zichtbaar/onzichtbaar",
     "Toolbox": "Gereedschapskist",
