define uniform tool title style, add some titles, update some titles

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -33,7 +33,7 @@
     "color": "color",
     "conic": "conic",
     "Countries, Places, Rivers, ...": "Countries, Places, Rivers, ...",
-    "Current view angle": "Current view angle",
+    "Current view angle": "3D Terrain and View Angle",
     "cylindrical": "cylindrical",
     "definitearticleline": "the line",
     "definitearticlepoint": "the point",
@@ -92,18 +92,20 @@
     "Line layer": "Line layer",
     "link how does EduGIS work?": "https://edugis.nl/hoe-werkt-edugis-atlas",
     "Load Table": "Load Table",
-    "Location": "Location",
+    "Location": "My Location",
     "Longitude": "Longitude",
     "longitude": "longitude",
     "Map": "Map",
     "Map Data Tools": "Map Data Tools",
     "Map language": "Map language",
+    "Map Language": "Map Language",
     "Map layer": "Map layer",
     "Map Layer 1": "Map Layer 1",
     "Map layer outside current view": "Map layer outside current view",
     "Map layers": "Map layers",
     "Map layers available (at least 1 required)": "Map layers available (at least 1 required)",
     "Map projection": "Map projection",
+    "Map Projections": "Map Projections",
     "map projections not supported by this viewer": "map projections not supported by this viewer",
     "Map view angle": "Map view angle",
     "Measure distance and surface": "Measure distance and surface",
