--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -33,7 +33,7 @@
     "color": "color",
     "conic": "cónico",
     "Countries, Places, Rivers, ...": "Países, Lugares, Ríos, ...",
-    "Current view angle": "Ángulo de vista actual",
+    "Current view angle": "Terreno 3D y Ángulo de Vista",
     "cylindrical": "cilíndrico",
     "definitearticleline": "la línea",
     "definitearticlepoint": "el punto",
@@ -92,18 +92,20 @@
     "Line layer": "Capa de línea",
     "link how does EduGIS work?": "https://edugis.nl/hoe-werkt-edugis-atlas",
     "Load Table": "Cargar Tabla",
-    "Location": "Ubicación",
+    "Location": "Mi Ubicación",
     "Longitude": "Longitud",
     "longitude": "longitud",
     "Map": "Mapa",
     "Map Data Tools": "Herramientas de Datos de Mapa",
     "Map language": "Idioma del mapa",
+    "Map Language": "Idioma del Mapa",
     "Map layer": "Capa de mapa",
     "Map Layer 1": "Capa de Mapa 1",
     "Map layer outside current view": "Capa de mapa fuera de la vista actual",
     "Map layers": "Capas de mapa",
     "Map layers available (at least 1 required)": "Capas de mapa disponibles (se requiere al menos 1)",
     "Map projection": "Proyección de mapa",
+    "Map Projections": "Proyecciones Cartográficas",
     "map projections not supported by this viewer": "proyecciones de mapa no soportadas por este visor",
     "Map view angle": "Ángulo de vista del mapa",
     "Measure distance and surface": "Medir distancia y superficie",
