--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -33,7 +33,7 @@
     "color": "couleur",
     "conic": "conique",
     "Countries, Places, Rivers, ...": "Pays, Lieux, Montagnes, Rivières",
-    "Current view angle": "Angle de vue actuel",
+    "Current view angle": "Terrain 3D et Angle de Vue",
     "cylindrical": "cylindrique",
     "definitearticleline": "la ligne",
     "definitearticlepoint": "le point",
@@ -93,18 +93,20 @@
     "Line layer": "Couche de lignes",
     "link how does EduGIS work?": "https://edugis.nl/hoe-werkt-edugis-atlas",
     "Load Table": "Charger le tableau",
-    "Location": "Localisation",
+    "Location": "Ma Position",
     "Longitude": "Longitude",
     "longitude": "longitude",
     "Map": "Carte",
     "Map Data Tools": "Outils de données cartographiques",
     "Map language": "Langue de la carte",
+    "Map Language": "Langue de la Carte",
     "Map layer": "Couche de carte",
     "Map Layer 1": "Couche de carte 1",
     "Map layer outside current view": "Couche de carte en dehors de la vue",
     "Map layers": "Couches de carte",
     "Map layers available (at least 1 required)": "Couches de carte disponibles (au moins 1 requise)",
     "Map projection": "Projection de la carte",
+    "Map Projections": "Projections Cartographiques",
     "map projections not supported by this viewer": "projections cartographiques non prises en charge par cette visionneuse",
     "Map view angle": "Angle de vue de la carte",
     "Measure distance and surface": "Mesurer la distance et la surface",
