--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -33,7 +33,7 @@
     "color": "kleur",
     "conic": "kegelprojectie",
     "Countries, Places, Rivers, ...": "Landen, Plaatsen, Gebergten, Rivieren",
-    "Current view angle": "Huidige kijkhoek",
+    "Current view angle": "3D terrein en kijkhoek",
     "cylindrical": "cilinderprojectie",
     "definitearticleline": "de lijn",
     "definitearticlepoint": "het punt",
@@ -93,18 +93,20 @@
     "Line layer": "Lijnenlaag",
     "link how does EduGIS work?": "https://edugis.nl/hoe-werkt-edugis-atlas",
     "Load Table": "Tabel inlezen",
-    "Location": "Locatie",
+    "Location": "Mijn locatie",
     "Longitude": "Lengtegraad",
     "longitude": "lengtegraad",
     "Map": "Kaart",
     "Map Data Tools": "Gereedschap kaartgegevens",
     "Map language": "Kaarttaal",
+    "Map Language": "Taal van de kaart",
     "Map layer": "Kaartlaag",
     "Map Layer 1": "Kaartlaag 1",
     "Map layer outside current view": "Kaartlaag buiten kaartbeeld",
     "Map layers": "Kaartlagen",
     "Map layers available (at least 1 required)": "kaartlagen aanwezig (minimaal 1 nodig)",
     "Map projection": "Kaartprojectie",
+    "Map Projections": "Kaartprojecties",
     "map projections not supported by this viewer": "kaartprojecties niet ondersteund door deze viewer",
     "Map view angle": "Kijkhoek",
     "Measure distance and surface": "Afstand en oppervlakte meten",
