add initial explanation text to info tool

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -23,12 +23,14 @@
     "Center Latitude": "Center Latitude",
     "Center Longitude": "Center Longitude",
     "Choose another view angle above<br><i>or</i> use CTRL + mouse button<br><i>or</i> drag the compass needle at the bottom left of the map<br><i>or</i> use 2 fingers on a touch screen": "Choose another view angle above<br><i>or</i> use CTRL + mouse button<br><i>or</i> drag the compass needle at the bottom left of the map<br><i>or</i> use 2 fingers on a touch screen",
-    "Click a map element for info on that element": "Click a map element for info on that element",
+    "Click a map element for info on that element": "Click on an object to view its properties such as name, height or population.",
     "Click first point for area": "Click first point for area",
     "Click last point to finish": "Click last point to finish",
     "Click next point": "Click next point",
     "Click on a result to zoom": "Click on a result to zoom",
+    "Click on the image for a full streetview": "Click on the image for a full streetview",
     "Click on the map to measure distance or area": "Click on the map to measure distance or area",
+    "Click the StreetView button to show a streetview image": "Click the StreetView button to show a streetview image",
     "Close": "Close",
     "color": "color",
     "conic": "conic",
@@ -66,7 +68,7 @@
     "Fill color": "Fill color",
     "Filter": "Filter",
     "find map layer": "find map layer",
-    "Get info from map": "Get info from map",
+    "Get info from map": "Object Information",
     "Globe": "Globe",
     "Hopscotch legend explain": "Here, the legends for the map layers will be shown. The legend for the background layer is also available",
     "Hopscotch map explain": "You can:<ul><li><b>zoom in</b> and <b>out</b>, from world wide down to your house</li><li><b>drag</b> the map to almost any location on earth.</li></ul>",
@@ -124,6 +126,7 @@
     "No map layers selected": "No map layers selected",
     "No visible elements in": "No visible elements in",
     "Northern Parallel Lat": "Northern Parallel Lat",
+    "Note: most objects on the background maps do not have additional information.": "Note: most objects on the background maps do not have additional information.",
     "nothing found": "nothing found",
     "number": "number",
     "OK": "OK",
