--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -23,12 +23,14 @@
     "Center Latitude": "Latitud del centro",
     "Center Longitude": "Longitud del centro",
     "Choose another view angle above<br><i>or</i> use CTRL + mouse button<br><i>or</i> drag the compass needle at the bottom left of the map<br><i>or</i> use 2 fingers on a touch screen": "Elija otro ángulo de vista arriba<br><i>o</i> use CTRL + botón del ratón<br><i>o</i> arrastre la aguja de la brújula en la parte inferior izquierda del mapa<br><i>o</i> use 2 dedos en una pantalla táctil",
-    "Click a map element for info on that element": "Haga clic en un elemento del mapa para obtener información sobre ese elemento",
+    "Click a map element for info on that element": "Haga clic en un objeto para ver sus características como nombre, altura o población.",
     "Click first point for area": "Haga clic en el primer punto para el área",
     "Click last point to finish": "Haga clic en el último punto para terminar",
     "Click next point": "Haga clic en el siguiente punto",
     "Click on a result to zoom": "Haga clic en un resultado para acercar",
+    "Click on the image for a full streetview": "Haga clic en la imagen para una vista de calle completa",
     "Click on the map to measure distance or area": "Haga clic en el mapa para medir distancia o área",
+    "Click the StreetView button to show a streetview image": "Haga clic en el botón StreetView para mostrar una imagen de vista de calle",
     "Close": "Cerrar",
     "color": "color",
     "conic": "cónico",
@@ -66,7 +68,7 @@
     "Fill color": "Color de relleno",
     "Filter": "Filtrar",
     "find map layer": "encontrar capa de mapa",
-    "Get info from map": "Obtener información del mapa",
+    "Get info from map": "Información del Objeto",
     "Globe": "Globo",
     "Hopscotch legend explain": "Aquí se mostrarán las leyendas de las capas de mapa. La leyenda de la capa de fondo también está disponible",
     "Hopscotch map explain": "Puede:<ul><li><b>acercar</b> y <b>alejar</b>, desde una visión mundial hasta su casa</li><li><b>arrastrar</b> el mapa a casi cualquier ubicación en la tierra.</li></ul>",
@@ -124,6 +126,7 @@
     "No map layers selected": "No se han seleccionado capas de mapa",
     "No visible elements in": "No hay elementos visibles en",
     "Northern Parallel Lat": "Latitud del Paralelo Norte",
+    "Note: most objects on the background maps do not have additional information.": "Nota: la mayoría de los objetos en los mapas de fondo no tienen información adicional.",
     "nothing found": "no se encontró nada",
     "number": "número",
     "OK": "Aceptar",
