--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -23,12 +23,13 @@
     "Center Latitude": "Centrale breedtegraad",
     "Center Longitude": "Centrale lengtegraad",
     "Choose another view angle above<br><i>or</i> use CTRL + mouse button<br><i>or</i> drag the compass needle at the bottom left of the map<br><i>or</i> use 2 fingers on a touch screen": "Kies hierboven een andere kijkhoek<br><i>of</i> gebruik CTRL + muisknop<br><i>of</i> sleep de kompasnaald links onderaan de kaart<br><i>of</i> gebruik 2 vingers op een aanraakscherm",
-    "Click a map element for info on that element": "Klik op een element in de kaart voor informatie over dat element",
-    "Click first point for area": "Klik op eerste punt voor oppervlakte",
+    "Click a map element for info on that element": "Klik op een object in de kaart voor informatie over dat object zoals naam, hoogte of aantal inwoners.",
     "Click last point to finish": "Klik laatste punt om te eindigen",
     "Click next point": "Klik volgend punt",
     "Click on a result to zoom": "Klik om op een resultaat in te zoomen",
+    "Click on the image for a full streetview": "Klik op de afbeelding voor een uitgebreidere streetview",
     "Click on the map to measure distance or area": "Klik in de kaart om afstand of oppervlakte te meten.",
+    "Click the StreetView button to show a streetview image": "Klik op de StreetView-knop om een streetview-afbeelding te tonen",
     "Close": "Sluiten",
     "color": "kleur",
     "conic": "kegelprojectie",
@@ -66,7 +67,7 @@
     "Fill color": "Vulkleur",
     "Filter": "Filteren",
     "find map layer": "zoek een kaartlaag",
-    "Get info from map": "Informatie uit de kaart halen",
+    "Get info from map": "Object-informatie",
     "Globe": "Globe",
     "Hopscotch legend explain": "Hier komen de legenda's van de kaartlagen<br>De legenda van de achtergrondlaag is hier ook te vinden",
     "Hopscotch map explain": "Je kunt:<ul><li><b>in-</b> en <b>uitzoomen</b>, van wereldwijd tot aan je eigen huis</li><li>de kaart <b>verslepen</b> naar bijna elke plek op de wereld.</li></ul>",
@@ -125,6 +126,7 @@
     "No map layers selected": "Geen kaartlagen gekozen",
     "No visible elements in": "Geen zichtbare elementen in",
     "Northern Parallel Lat": "Noordelijke parallel (breedtegraad)",
+    "Note: most objects on the background maps do not have additional information.": "Let op: de meeste objecten op de achtergrondkaarten hebben geen extra informatie.",
     "nothing found": "niets gevonden",
     "number": "getal",
     "OK": "OK",
