--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -23,12 +23,14 @@
     "Center Latitude": "Latitude centrale",
     "Center Longitude": "Longitude centrale",
     "Choose another view angle above<br><i>or</i> use CTRL + mouse button<br><i>or</i> drag the compass needle at the bottom left of the map<br><i>or</i> use 2 fingers on a touch screen": "Choisissez un autre angle de vue ci-dessus<br><i>ou</i> utilisez CTRL + bouton de la souris<br><i>ou</i> déplacez l'aiguille de la boussole en bas à gauche de la carte<br><i>ou</i> utilisez 2 doigts sur un écran tactile",
-    "Click a map element for info on that element": "Cliquez sur un élément de la carte pour obtenir des informations sur cet élément",
+    "Click a map element for info on that element": "Cliquez sur un objet pour voir ses caractéristiques comme le nom, la hauteur ou la population.",
     "Click first point for area": "Cliquez sur le premier point pour la surface",
     "Click last point to finish": "Cliquez sur le dernier point pour terminer",
     "Click next point": "Cliquez sur le point suivant",
     "Click on a result to zoom": "Cliquez sur un résultat pour zoomer",
+    "Click on the image for a full streetview": "Cliquez sur l'image pour une vue de rue complète",
     "Click on the map to measure distance or area": "Cliquez sur la carte pour mesurer la distance ou la surface.",
+    "Click the StreetView button to show a streetview image": "Cliquez sur le bouton StreetView pour afficher une vue de rue",
     "Close": "Fermer",
     "color": "couleur",
     "conic": "conique",
@@ -66,7 +68,7 @@
     "Fill color": "Couleur de remplissage",
     "Filter": "Filtrer",
     "find map layer": "trouver une couche de carte",
-    "Get info from map": "Obtenir des informations à partir de la carte",
+    "Get info from map": "Information sur l'Objet",
     "Globe": "Globe terrestre",
     "Hopscotch legend explain": "Ici, les légendes des couches de la carte seront affichées. La légende de la couche d'arrière-plan est également disponible",
     "Hopscotch map explain": "Vous pouvez :<ul><li><b>zoomer</b> et <b>dézoomer</b>, du monde entier jusqu'à votre maison</li><li><b>faire glisser</b> la carte vers presque n'importe quel endroit sur Terre.</li></ul>",
@@ -125,6 +127,7 @@
     "No map layers selected": "Aucune couche de carte sélectionnée",
     "No visible elements in": "Aucun élément visible dans",
     "Northern Parallel Lat": "Latitude parallèle nord",
+    "Note: most objects on the background maps do not have additional information.": "Attention : la plupart des objets sur les cartes de fond n'ont pas d'informations supplémentaires.",
     "nothing found": "rien trouvé",
     "number": "nombre",
     "OK": "OK",
