add 3 more tour steps (helpstart=true), add tour translations, adjust tour layout to UI theme

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -70,9 +70,15 @@
     "find map layer": "find map layer",
     "Get info from map": "Object Information",
     "Globe": "Globe",
+    "Hopscotch coordinates explain": "Here you can:<ul><li>view the <b>coordinates</b> of the pointer.</li><li>click on the map to lock the coordinates.</li><li>click on the coordinate to <b>copy</b>.</li></ul>",
+    "Hopscotch coordinates title": "Coordinates",
     "Hopscotch legend explain": "Here, the legends for the map layers will be shown. The legend for the background layer is also available",
     "Hopscotch map explain": "You can:<ul><li><b>zoom in</b> and <b>out</b>, from world wide down to your house</li><li><b>drag</b> the map to almost any location on earth.</li></ul>",
+    "Hopscotch scale and attribution explain": "Here you can:<ul><li>read the <b>scale</b> of the map.</li>    <li>read the <b>attribution</b>.</li></ul>",
+    "Hopscotch scale and attribution title": "Scale and attribution",
     "Hopscotch tools explain": "With these buttons, you perform operations on the map.<p>Hover the mouse over the buttons for additional information",
+    "Hopscotch zoom explain": "Here you can:<ul><li><b>zoom in and out</b> using the '+' and '-' buttons.</li><li>adjust and reset the <b>north orientation</b>.</li><li>enter a <b>zoom level</b> directly.</li></ul>",
+    "Hopscotch zoom title": "Zoom and rotate",
     "How does EduGIS work?": "How does EduGIS work?",
     "How does {{appname}} work?": "How does {{appname}} work?",
     "In drawing mode": "In drawing mode",
