--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -70,9 +70,15 @@
     "find map layer": "encontrar capa de mapa",
     "Get info from map": "Información del Objeto",
     "Globe": "Globo",
+    "Hopscotch coordinates explain": "Aquí puedes:<ul><li>ver las <b>coordenadas</b> del puntero.</li><li>hacer clic en el mapa para fijar las coordenadas.</li><li>hacer clic en las coordenadas para <b>copiarlas</b>.</li></ul>",
+    "Hopscotch coordinates title": "Coordenadas",
     "Hopscotch legend explain": "Aquí se mostrarán las leyendas de las capas de mapa. La leyenda de la capa de fondo también está disponible",
     "Hopscotch map explain": "Puede:<ul><li><b>acercar</b> y <b>alejar</b>, desde una visión mundial hasta su casa</li><li><b>arrastrar</b> el mapa a casi cualquier ubicación en la tierra.</li></ul>",
+    "Hopscotch scale and attribution explain": "Aquí puedes:<ul><li>leer la <b>escala</b> del mapa.</li>    <li>leer la <b>atribución</b>.</li></ul>",
+    "Hopscotch scale and attribution title": "Escala y atribución",
     "Hopscotch tools explain": "Con estos botones, realiza operaciones en el mapa.<p>Pase el mouse sobre los botones para obtener información adicional",
+    "Hopscotch zoom explain": "Aquí puedes:<ul><li><b>acercar y alejar</b> usando los botones '+' y '-'.</li><li>ajustar y restablecer la <b>orientación norte</b>.</li><li>introducir un <b>nivel de zoom</b>.</li></ul>",
+    "Hopscotch zoom title": "Zoom y rotación",
     "How does EduGIS work?": "¿Cómo funciona EduGIS?",
     "How does {{appname}} work?": "¿Cómo funciona {{appname}}?",
     "In drawing mode": "En modo de dibujo",
