--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -70,9 +70,15 @@
     "find map layer": "trouver une couche de carte",
     "Get info from map": "Information sur l'Objet",
     "Globe": "Globe terrestre",
+    "Hopscotch coordinates explain": "Ici vous pouvez:<ul><li>voir les <b>coordonnées</b> du pointeur.</li><li>cliquer sur la carte pour verrouiller les coordonnées.</li><li>cliquer sur les coordonnées pour les <b>copier</b>.</li></ul>",
+    "Hopscotch coordinates title": "Coordonnées",
     "Hopscotch legend explain": "Ici, les légendes des couches de la carte seront affichées. La légende de la couche d'arrière-plan est également disponible",
     "Hopscotch map explain": "Vous pouvez :<ul><li><b>zoomer</b> et <b>dézoomer</b>, du monde entier jusqu'à votre maison</li><li><b>faire glisser</b> la carte vers presque n'importe quel endroit sur Terre.</li></ul>",
+    "Hopscotch scale and attribution explain": "Ici vous pouvez:<ul><li>lire l'<b>échelle</b> de la carte.</li>    <li>lire les <b>attributions</b>.</li></ul>",
+    "Hopscotch scale and attribution title": "Échelle et attribution",
     "Hopscotch tools explain": "Avec ces boutons, vous effectuez des opérations sur la carte.<p>Passez la souris sur les boutons pour obtenir des informations supplémentaires",
+    "Hopscotch zoom explain": "Ici vous pouvez:<ul><li><b>zoomer et dézoomer</b> avec les boutons '+' et '-'.</li><li>ajuster et réinitialiser l'<b>orientation vers le nord</b>.</li><li>saisir un <b>niveau de zoom</b>.</li></ul>",
+    "Hopscotch zoom title": "Zoom et rotation",
     "How does EduGIS work?": "Comment fonctionne EduGIS?",
     "How does {{appname}} work?": "Comment fonctionne {{appname}}?",
     "In drawing mode": "En mode dessin",
