--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -69,9 +69,15 @@
     "find map layer": "zoek een kaartlaag",
     "Get info from map": "Object-informatie",
     "Globe": "Globe",
+    "Hopscotch coordinates explain": "Hier kun je:<ul><li>de <b>coördinaten</b> van de aanwijzer bekijken.</li><li>klik op de kaart om de coördinaten vast te leggen.</li><li>klik op het coördinaat om te <b>kopiëren</b>.</li></ul>",
+    "Hopscotch coordinates title": "Coördinaten",
     "Hopscotch legend explain": "Hier komen de legenda's van de kaartlagen<br>De legenda van de achtergrondlaag is hier ook te vinden",
     "Hopscotch map explain": "Je kunt:<ul><li><b>in-</b> en <b>uitzoomen</b>, van wereldwijd tot aan je eigen huis</li><li>de kaart <b>verslepen</b> naar bijna elke plek op de wereld.</li></ul>",
+    "Hopscotch scale and attribution explain": "Hier kun je:<ul><li>de <b>schaal</b> van de kaart aflezen.</li>    <li>de <b>bronvermelding</b> aflezen.</li></ul>",
+    "Hopscotch scale and attribution title": "Schaal en bronvermelding",
     "Hopscotch tools explain": "Met deze knoppen doe je bewerkingen op de kaart.<p>Houd de muis stil boven de knoppen voor meer uitleg over elke knop",
+    "Hopscotch zoom explain": "Hier kun je:<ul><li>met knoppen <b>in- en uitzoomen</b>.</li><li>de <b>noordgerichtheid</b> aanpassen en herstellen.</li><li>een <b>zomniveau</b> invoeren.</li></ul>",
+    "Hopscotch zoom title": "Zoomen en draaien",
     "How does EduGIS work?": "Hoe werkt EduGIS?",
     "How does {{appname}} work?": "Hoe werkt {{appname}}?",
     "In drawing mode": "Bezig met tekenen",
